# RustTClicker

./: .gitignore  README.md
src/: index.html  script.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
